Prevent notification from causing horizontal overflow & fixing css

--- a/direction/top-right.css
+++ b/direction/top-right.css
@@ -1,6 +1,6 @@
 #notifications-container {
     top: 10px;
-    right: 28px;
+    right: 0;
     width: 300px;
     
     display: flex;
@@ -9,5 +9,5 @@
     justify-content: flex-start;
 }
 .notification {
-    right: 0; /* For transition */
+    right: 15px; /* For transition */
 }
